<resources>
    <string name="app_name">MessengerApp</string>
    <string name="phone_number_or_email">Phone Number or Email</string>
    <string name="log_in">Log in</string>
    <string name="create_new_account">Create new account</string>
    <string name="hint_creating_new_account">You will not be creating a Facebook profile</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="loading">Loading...</string>
    <string name="sign_out">Sign out</string>
    <string name="chat">Chat</string>
    <string name="people">People</string>
    <string name="more">More</string>
    <string name="me">Me</string>
    <string name="you">You:</string>
    <string name="sent_photo_message">sent a photo message.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="aa">Aa</string>
</resources>