<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.sigin.SignInActivity">

        <ImageView
            android:id="@+id/ic_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_messenger_logo"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/et_phone_or_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_or_email"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@null"
            android:layout_marginTop="64dp"
            android:layout_marginHorizontal="16dp"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ic_logo" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_grey"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/et_phone_or_email" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:background="@null"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <ImageView
            android:id="@+id/ic_eye"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_eye_grey"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintBottom_toBottomOf="@+id/et_password"
            app:layout_constraintTop_toTopOf="@+id/et_password"/>

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/log_in"
            android:textColor="@color/selector_color_btn_text_watcher"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/selector_shape_btn_text_watcher"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Button
            android:id="@+id/btn_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textColor="@color/white_light"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/shape_btn_corners_16"
            android:backgroundTint="@color/app_green"
            app:layout_constraintTop_toBottomOf="@+id/btn_log_in" />

        <TextView
            android:id="@+id/tv_hint_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_creating_new_account"
            android:textSize="12sp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_new_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/app_color"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_new_account" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>