<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.signup.SignUpActivity">

        <ImageView
            android:id="@+id/ic_logo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/ic_messenger_logo"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:ems="10"
            android:background="@null"
            android:layout_marginTop="48dp"
            android:layout_marginHorizontal="16dp"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ic_logo" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_grey"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <EditText
            android:id="@+id/et_phone_or_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_or_email"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@null"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_grey"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_phone_or_email" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:background="@null"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <ImageView
            android:id="@+id/ic_eye"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_eye_grey"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintBottom_toBottomOf="@+id/et_password"
            app:layout_constraintTop_toTopOf="@+id/et_password"/>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_grey"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/sign_up"
            android:textColor="@color/selector_color_btn_text_watcher"
            android:textSize="14sp"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/selector_shape_btn_text_watcher"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/white_light"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/shape_btn_corners_16"
            android:backgroundTint="@color/app_green"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>